--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css?family=Rajdhani:400,600,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
+
+sf-ui-display-text.woff
 h1 {
     text-align: center;
     font-size: 100px;
@@ -18,4 +22,67 @@ h3 {
 p {
     font-size: 25px;
     color: rgb(58, 58, 58);
+}
+
+
+.h2staff{
+    text-align: center;
+}
+
+.users {
+    display: block;
+    text-align: center;
+}
+
+user {
+    width: 110px;
+    flex-shrink: 1;
+    display: inline-block;
+    margin: 1.4vw;
+    text-align: center;
+    padding: 10px;
+    background-color: #1a1a1a00;
+    border-radius: 20px 20px;
+    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+}
+
+user p {
+    font-size: 80%;
+    color: #404042;
+}
+
+user h3 {
+    margin: 0;
+    margin-top: 10px;
+    color: #ff9267;
+}
+
+user .icon-container img {
+    width: 80px;
+    height: auto;
+}
+
+user .icon-container {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+user a {
+    text-rendering: optimizeLegibility;
+    color: #ff9267;
+    position: absolute;
+    top: 15;
+    right: 15;
+    -webkit-transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
+    -moz-transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
+    -o-transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
+    transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
+    /* custom */
 }
