--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,19 @@
 @import url("https://fonts.googleapis.com/css?family=Rajdhani:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700");
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    text-align: center;
+    display: flex;
+    height: 70px;
+    width: 100%;
+    padding: 0 20px;
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/debut_light.png");
+}
+
 h1 {
     text-align: center;
     font-size: 100px;
@@ -42,8 +55,6 @@ user {
     background-color: #1a1a1a00;
     border-radius: 20px 20px;
     -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
-    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
-    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
     transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
 }
 
@@ -79,8 +90,6 @@ user a {
     top: 15;
     right: 15;
     -webkit-transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
-    -moz-transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
-    -o-transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
     transition: all 400ms cubic-bezier(1.000, 0.005, 0.340, 1.000);
     /* custom */
 }
