--- a/css/nav.css
+++ b/css/nav.css
@@ -1,62 +1,127 @@
+body, nav, ul, li, a {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 90%;
+  max-width: 900px;
+  margin: 10px auto;
+}
+
+.toggleMenu {
+  display: none;
+  background: #666;
+  padding: 10px 15px;
+  color: #fff;
+}
+
 .nav {
-    display: inline-flex;
+  list-style: none;
+  *zoom: 1;
+  background: #000000be;
+  position: relative;
+}
+
+.nav:before,
+.nav:after {
+  content: " ";
+  display: table;
+}
+
+.nav:after {
+  clear: both;
+}
+
+.nav ul {
+  list-style: none;
+  width: 9em;
+}
+
+.nav a {
+  padding: 10px 15px;
+  color: #fff;
+  *zoom: 1;
+}
+
+.nav li {
     position: relative;
-    overflow: hidden;
-    max-width: 100%;
-    background-color: #fff;
-    padding: 0 20px;
-    border-radius: 40px;
-    box-shadow: 0 10px 40px rgba(159, 162, 177, .8);
 }
 
-.nav-item {
-    color: #83818c;
-    padding: 20px;
-    text-decoration: none;
-    transition: .3s;
-    margin: 0 6px;
-    z-index: 1;
-    font-family: 'DM Sans', sans-serif;
-    font-weight: 500;
-    position: relative;
-
-    &:before {
-        content: "";
-        position: absolute;
-        bottom: -6px;
-        left: 0;
-        width: 100%;
-        height: 5px;
-        background-color: #dfe2ea;
-        border-radius: 8px 8px 0 0;
-        opacity: 0;
-        transition: .3s;
-    }
-}
-
-.nav-item:not(.is-active):hover:before {
-    opacity: 1;
-    bottom: 0;
-}
-
-
-.nav-item:not(.is-active):hover {
-    color: #333;
-}
-
-.nav-indicator {
-    position: absolute;
+.nav>li.hover>ul {
     left: 0;
-    bottom: 0;
-    height: 4px;
-    transition: .4s;
-    height: 5px;
-    z-index: 1;
-    border-radius: 8px 8px 0 0;
 }
 
-@media (max-width: 580px) {
-    .nav {
-        overflow: auto;
+.nav li li.hover ul {
+    left: 100%;
+    top: 0;
+}
+.nav > li > a {
+  display: block;
+}
+
+.nav li ul {
+  position: absolute;
+  left: -9999px;
+  z-index: 100;
+}
+
+.nav li li a {
+  display: block;
+  background: #000000be;
+  position: relative;
+  z-index: 100;
+  border-top: 1px solid #000000be;
+}
+
+.nav li li li a {
+  background: #000000be;
+  z-index: 200;
+  border-top: 1px solid #000000be;
+}
+
+@media screen and (max-width: 800px) {
+    .nav>li {
+        float: none;
     }
+
+    .nav ul {
+        display: block;
+        width: 100%;
+    }
+
+    .nav>li.hover>ul,
+    .nav li li.hover ul {
+        position: static;
+    }
+}
+
+.nav>li>.parent {
+    background-position: 95% 50%;
+}
+
+.nav li li .parent {
+    background-image: url("images/downArrow.png");
+    background-repeat: no-repeat;
+    background-position: 95% 50%;
+}
+
+@media screen and (max-width: 800px) {
+    .nav>li>.parent {
+        background-position: 95% 50%;
+    }
+
+    .nav li li .parent {
+        background-image: url("images/downArrow.png");
+        background-repeat: no-repeat;
+        background-position: 95% 50%;
+    }
+}
+
+.nav a {
+    *zoom: 1;
 }
