--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
     height: 70px;
     width: 100%;
     padding: 0 20px;
-    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/debut_light.png");
+    background-image: #ffffff
 }
 
 h1 {
